--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <title>List APP</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <style>
+    li {
+      list-style: none;
+    }
+  </style>
+
 </head>
 <body>
   <div id="app"></div>
